# privatecloud

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  privatecloud.yaml.example  pyproject.toml
.github/issues/: 001-backup-secrets-encryption.md  002-gui-no-authentication.md  003-restore-resource-conflicts.md  004-longhorn-snapshot-retention.md  005-backup-encryption-native.md  006-gui-authentication.md  007-scheduled-backups.md  008-backup-verification.md  009-cloud-storage-backup.md  010-gui-metrics-dashboard.md  011-enhanced-doctor-diagnostics.md  012-terraform-state-pre-destroy-backup.md  013-external-etcd-backup.md  014-restore-dry-run.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release.yml  security.yml  test-integration.yml
docs/: index.md  installation.md  providers.md  usage.md
examples/: backup-s3.yaml  docker-compose.yml  ha-proxmox.yaml  privatecloud.example.yaml  prometheus.yml
privatecloud/: addons.py  backup.py  changelog.py  cli.py  cloud_storage.py  config.py  doctor.py  etcd.py  helm.py  high_availability.py  installer.py  metrics.py  multicluster.py  pitr.py  scheduler.py  security.py  terraform.py  upgrade.py  utils.py  validate.py
privatecloud/gui/: app.py
privatecloud/gui/static/: style.css
privatecloud/gui/templates/: dashboard.html  login.html
privatecloud/templates/: proxmox.tf.j2
tests/: __init__.py  test_config.py  test_doctor.py  test_integration.py  test_utils.py
